<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Brass Services</string>
    <string name="menu_logout">Logout</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="success">Success</string>
    <string name="check_point">Check Point</string>
    <string name="check_point_history">Check point history</string>
    <string name="submit">Submit</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="check_in_action">Check in action</string>
    <string name="choose_destination">choose destination</string>
    <string name="CLOSE">CLOSE</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="menu_about">About</string>
    <string name="menu_submit">Submit</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="profile">Profile</string>
    <string name="default_notification_channel_id">App_Notifications</string>
    <string name="default_notification_channel_id_string">App Notifications</string>
    <string name="menu_change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="check_in_out">CheckInOut</string>
    <string name="check_in_out_description">Check In/Out Notifications</string>
    <string name="check_in_notification_content_text">You are now at the Office</string>
    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="content_text">You found a clue <xliff:g id="geofence_location">%1$s</xliff:g>.</string>
    <string name="location_required_error">Location services must be enabled for Attendance to function.</string>
    <string name="ferry_building_hint">Go to Placidius\'s  Office</string>
    <string name="ferry_building_location">at the Placidius Office</string>
    <string name="geofences_not_removed">Geofences not removed.</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="geofence_error">There was an error in finding your treasure</string>
    <string name="golden_gate_bridge_hint">Go to kelvin\'s Office</string>
    <string name="golden_gate_bridge_location">at the Kelvin\'s Office</string>
    <string name="not_started_hint"></string>
    <!--    Geofence Status Strings-->
    <string name="geofences_added">Clue Geofence added.</string>
    <string name="geofences_removed">Geofences removed.</string>
    <string name="geofence_entered">Geofence entered.</string>
    <string name="geofence_over">You have found the treasure! Congratulations!</string>

    <string name="permission_rationale">Location permission needed for core functionality of Check In or Out.
    </string>

    <string name="permission_denied_explanation">
        You need to grant location permission in order for the app to function properly.
    </string>

    <!-- Buttons strings -->
    <string name="add_geofences">Add geofences</string>
    <string name="remove_geofences">Remove geofences</string>

    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>

    <string name="fetch_address">Fetch address</string>
    <string name="settings">Settings</string>

    <string name="address_found">Address found</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="retry">Retry</string>
    <string name="coordinate_not_found">Coordinate not found</string>

    <string name="notification_channel_description">Office status notification</string>
    <string name="channel_name">Office Status</string>
</resources>