<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/lyt_parent"
    android:background="@color/colorPrimaryDark">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:scaleType="centerCrop"
        android:src="@drawable/world_map"
        app:tint="@color/blue_A100" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:scrollbars="none"
        android:scrollingCache="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="@dimen/spacing_mxlarge">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/image"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:src="@mipmap/ic_launcher_round"
                    app:civ_border="true"
                    app:civ_border_color="@color/colorOnPrimary"
                    app:civ_border_width="3dp"
                    app:civ_shadow="true"
                    app:civ_shadow_radius="0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_middle"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/spacing_middle">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="330dp"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:orientation="vertical"
                        android:padding="@dimen/spacing_large"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            app:hintTextColor="@color/colorOnPrimary"
                            app:placeholderTextColor="@color/colorOnPrimary"
                            app:helperTextTextColor="@color/colorOnPrimary"
                            android:layout_marginTop="@dimen/spacing_large"
                            android:textColorHint="@color/colorAccent"
                            app:boxStrokeColor="@color/colorAccent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/old_password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/old_password"
                            android:inputType="textEmailAddress"
                            android:maxLength="50"
                            android:maxLines="1"
                            android:padding="0dp"
                            android:singleLine="true"
                            android:textColor="@color/blue_grey_300" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            app:hintTextColor="@color/colorOnPrimary"
                            app:placeholderTextColor="@color/colorOnPrimary"
                            app:helperTextTextColor="@color/colorOnPrimary"
                            android:layout_marginTop="@dimen/spacing_large"
                            android:textColorHint="@color/colorAccent"
                            app:boxStrokeColor="@color/colorAccent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/new_password"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:hint="@string/new_password"
                                android:inputType="textEmailAddress"
                                android:maxLength="50"
                                android:maxLines="1"
                                android:padding="0dp"
                                android:singleLine="true"
                                android:textColor="@color/blue_grey_300" />
                        </com.google.android.material.textfield.TextInputLayout>


                        <com.google.android.material.button.MaterialButton
                            android:layout_marginTop="@dimen/spacing_large"
                            android:backgroundTint="@color/colorOnPrimary"
                            android:textStyle="bold"
                            android:id="@+id/submit"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:layout_marginLeft="-4dp"
                            android:layout_marginRight="-4dp"
                            android:text="@string/menu_submit"
                            android:textAllCaps="true"
                            android:textColor="@color/colorPrimary" />

                    </LinearLayout>

                    <com.github.ybq.android.spinkit.SpinKitView
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:id="@+id/spin_kit"
                        style="@style/SpinKitView.Large.Circle"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:visibility="gone"
                        app:SpinKit_Color="@color/colorOnPrimary" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>