<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/lyt_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/world_map"
        app:tint="@color/blue_A100" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:scrollbars="none"
        android:scrollingCache="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/spacing_mxlarge">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:clickable="true"
                    android:id="@+id/image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@mipmap/ic_launcher_round"
                    app:civ_border="true"
                    app:civ_border_color="@color/colorOnPrimary"
                    app:civ_border_width="3dp"
                    app:civ_shadow="true"
                    app:civ_shadow_radius="0" />

                <View
                    android:layout_width="@dimen/spacing_large"
                    android:layout_height="0dp" />

                <com.github.ybq.android.spinkit.SpinKitView
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/spin_kit"
                    style="@style/SpinKitView.Large.Circle"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    app:SpinKit_Color="@color/colorOnPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/white"
                        app:fontFamily="sans-serif-medium" />

                    <TextView
                        android:id="@+id/contact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_medium"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                        android:textColor="@android:color/white" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_middle"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/spacing_middle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xxxlarge"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/spacing_large"
                    android:paddingRight="@dimen/spacing_large">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:tint="@color/colorOnPrimary"
                        app:srcCompat="@drawable/ic_person_outline" />

                    <TextView
                        android:id="@+id/name_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_large"
                        android:layout_marginRight="@dimen/spacing_large"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/grey_20"
                        app:fontFamily="sans-serif-medium" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xxxlarge"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/spacing_large"
                    android:paddingRight="@dimen/spacing_large">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:tint="@color/colorOnPrimary"
                        app:srcCompat="@drawable/ic_baseline_phone_24" />

                    <TextView
                        android:id="@+id/phone_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_large"
                        android:layout_marginRight="@dimen/spacing_large"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/grey_20"
                        app:fontFamily="sans-serif-medium" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />


                </LinearLayout>

                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/privacy_policy"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xxxlarge"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/spacing_large"
                    android:paddingRight="@dimen/spacing_large"
                    android:focusable="true">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:tint="@color/colorOnPrimary"
                        app:srcCompat="@drawable/ic_baseline_privacy_tip_24" />

                    <TextView
                        android:text="@string/privacy_policy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_large"
                        android:layout_marginRight="@dimen/spacing_large"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/grey_20"
                        app:fontFamily="sans-serif-medium" />


                </LinearLayout>

                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/about_team"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xxxlarge"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/spacing_large"
                    android:paddingRight="@dimen/spacing_large"
                    android:focusable="true">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:tint="@color/colorOnPrimary"
                        app:srcCompat="@drawable/ic_baseline_info_24" />

                    <TextView
                        android:text="@string/menu_about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_large"
                        android:layout_marginRight="@dimen/spacing_large"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/grey_20"
                        app:fontFamily="sans-serif-medium" />



                </LinearLayout>

                <LinearLayout
                    android:id="@+id/change_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xxxlarge"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/spacing_large"
                    android:paddingRight="@dimen/spacing_large"
                    android:focusable="true">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:tint="@color/colorOnPrimary"
                        app:srcCompat="@drawable/ic_baseline_security_24" />

                    <TextView
                        android:text="@string/menu_change_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_large"
                        android:layout_marginRight="@dimen/spacing_large"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/grey_20"
                        app:fontFamily="sans-serif-medium" />



                </LinearLayout>

                <LinearLayout
                    android:id="@+id/logout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xxxlarge"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/spacing_large"
                    android:paddingRight="@dimen/spacing_large">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:tint="@color/colorOnPrimary"
                        app:srcCompat="@drawable/ic_baseline_login_24" />

                    <TextView
                        android:text="@string/menu_logout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_large"
                        android:layout_marginRight="@dimen/spacing_large"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/grey_20"
                        app:fontFamily="sans-serif-medium" />



                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_mlarge" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:visibility="gone"
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_mlarge"
        android:clickable="true"
        android:tint="@color/colorPrimary"
        app:backgroundTint="@color/colorOnPrimary"
        app:fabSize="normal"
        app:layout_anchor="@id/nested_scroll_view"
        app:layout_anchorGravity="bottom|right|end"
        app:srcCompat="@drawable/ic_baseline_edit_primary24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>